--- a/manage-product.html
+++ b/manage-product.html
@@ -149,7 +149,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary" id="saveProduct">Edit</button>
+                        <button type="button" class="btn btn-primary" id="editProduct">Edit</button>
                     </div>
                 </div>
             </div>
