--- a/manage-product.html
+++ b/manage-product.html
@@ -120,7 +120,7 @@
                         <h4 class="modal-title">Edit Product</h4>
                     </div>
                     <div class="modal-body">
-                        <form id="productForm">
+                        <form id="editForm">
                             <input type="hidden" name="id" id="id" value="0">
                             <div class="row">
                                 <div class="col-sm-12">
@@ -133,7 +133,7 @@
                                 <div class="col-sm-12">
                                     <div class="form-group">
                                         <label>Unit</label>
-                                        <select name="uoms" id="uoms" class="form-control">
+                                        <select name="uoms" id="edituoms" class="form-control">
                                         </select>
                                     </div>
                                 </div>
